<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home"
            android:textColor="@color/font_dark_blue"/>
        <item
            android:id="@+id/nav_create_manually"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery"
            android:textColor="@color/font_dark_blue"/>
        <item
            android:id="@+id/nav_aiGenerate"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_ai_generate"
            android:textColor="@color/font_dark_blue"/>

        <item
            android:id="@+id/nav_tasks_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tasks"
            android:textColor="@color/font_dark_blue"/>
    </group>
</menu>