<?xml version="1.0" encoding="utf-8"?>

<!-- This file defines the navigation structure of our app,
including the start destination and all the possible paths that the user can navigate to. -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pa.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_create_manually"
        android:name="com.example.pa.ui.gallery.CreateManuallyFragment"
        android:label="@string/create_manually"
        tools:layout="@layout/fragment_create_manually" />

    <fragment
        android:id="@+id/nav_aiGenerate"
        android:name="com.example.pa.ui.aigenerate.AiGenerateFragment"
        android:label="@string/menu_ai_generate"
        tools:layout="@layout/fragment_ai_generate" />

    <fragment
        android:id="@+id/nav_tasks_list"
        android:name="com.example.pa.ui.todolist.TasksListFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_tasks_list" />
</navigation>