<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.CreateManuallyFragment">

    <TextView
        android:id="@+id/label_manual_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72sp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/create_a_task_manually"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Task: -->
    <TextView
        android:id="@+id/task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/input_padding"
        android:text="@string/task"
        android:textSize="@dimen/text_item_size"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/start"
        app:layout_constraintBottom_toBottomOf="@id/task_manual_input" />

    <EditText
        android:id="@+id/task_manual_input"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="80sp"
        android:autofillHints="task"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/tell_me_the_task"
        android:textSize="@dimen/text_item_size"
        app:layout_constraintTop_toBottomOf="@id/label_manual_create"
        app:layout_constraintStart_toStartOf="@id/task_start_date"
        tools:ignore="LabelFor" />

    <!-- Start date: -->
    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/input_padding"
        android:layout_marginStart="@dimen/common_margin"
        android:text="@string/start_date"
        android:textSize="@dimen/text_item_size"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/task_start_date" />

    <EditText
        android:id="@+id/task_start_date"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/input_height"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="@dimen/common_margin"
        android:autofillHints="task"
        android:ems="10"
        android:hint="@string/pick_start_date"
        android:textSize="@dimen/text_item_size"
        android:cursorVisible="false"
        app:layout_constraintTop_toBottomOf="@id/task_manual_input"
        app:layout_constraintStart_toEndOf="@id/start"
        android:inputType="date"  />

    <!-- End date: -->
    <TextView
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/input_padding"
        android:text="@string/end_date"
        android:textSize="@dimen/text_item_size"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/start"
        app:layout_constraintBottom_toBottomOf="@id/task_end_date" />

    <EditText
        android:id="@+id/task_end_date"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="50sp"
        android:autofillHints="task"
        android:ems="10"
        android:hint="@string/pick_end_date"
        android:textSize="@dimen/text_item_size"
        android:cursorVisible="false"
        app:layout_constraintStart_toStartOf="@id/task_start_date"
        app:layout_constraintTop_toBottomOf="@id/task_start_date"
        tools:ignore="LabelFor"
        android:inputType="date" />

    <Button
        android:id="@+id/btn_create_task"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_general_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_end_date" />


</androidx.constraintlayout.widget.ConstraintLayout>