<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.aigenerate.AiGenerateFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/aigenerate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textSize="50sp"
            android:text="@string/ai_generate_title" />

        <TextView
            android:id="@+id/ai_generate_topic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aigenerate_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/ai_generate_topic_title"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/ai_generate_topic_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/ai_generate_topic_title"
            android:textAlignment="center"
            android:textSize="20sp"
            android:gravity="center"
            android:hint="@string/ai_generate_topic_input_hint" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>