<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_gallery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

        <TextView
            android:id="@+id/label_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176sp"
            android:layout_marginTop="72sp"
            android:layout_marginEnd="177sp"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/task_input"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_height"
            android:layout_marginStart="100sp"
            android:layout_marginTop="100sp"
            android:layout_marginEnd="100sp"
            android:layout_marginBottom="400sp"
            android:autofillHints="task"
            android:ems="10"
            android:inputType="text"
            android:text="@string/tell_me_the_task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_not_paid"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btn_margin_start_end"
            android:layout_marginBottom="@dimen/btn_margin_bottom"
            android:text="@string/type_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_paid"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/btn_margin_start_end"
            android:layout_marginBottom="@dimen/btn_margin_bottom"
            android:text="@string/ai_generate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



    <!--TODO: check this part after running-->
    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>